<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BlackOut</string>

    <string name="lobby">Lobby</string>
    <string name="gaming">Gaming</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="extra">Extra</string>
    <string name="appinfo">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="more">more</string>
    <string name="menu">Menu</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="hinzufügen">Hinzufügen</string>
    <string name="DeleteallPlayers">Delete all Players</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>




</resources>