<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lobby"
            android:icon="@drawable/ic_person"
            android:title="@string/lobby" />
        <item
            android:id="@+id/nav_gaming"
            android:icon="@drawable/ic_gaming"
            android:title="@string/gaming" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_placeholder_statistics"
            android:title="@string/statistics" />
    </group>

    <item android:title="@string/extra">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_appinfo"
                android:icon="@drawable/ic_info"
                android:title="@string/appinfo" />

        </menu>
    </item>


</menu>